# DS_Homework_08

./: pyproject.toml  tensorflow_mnist_hw.ipynb
