[tool.poetry]
name = "ds-homework-08"
version = "0.1.0"
description = ""
authors = ["MaksymBratsiun <bratsyun_m@ukr.net>"]
readme = "README.md"
packages = [{include = "ds_homework_08"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
notebook = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
